Fix Bug 243774 - Closing angle bracket incorporated in autodetected hyperlinks

FIXED-IN: 4.10.2
BUG: 243774